plugins {
    id 'net.neoforged.moddev.legacyforge' version '2.0.77'
    id 'maven-publish'
}

mixin {
    add sourceSets.main, "brewinandchewin.refmap.json"
}

version = "${mc_version}-${mod_version}"
group = 'umpaz.brewinandchewin' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'BrewinAndChewin'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

mixin {
    add(sourceSets.main, "${mod_id}.refmap.json")

    config("${mod_id}.mixins.json")
}

legacyForge {
    version = "${mc_version}-${forge_version}"

    if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
        accessTransformers = ["src/main/resources/META-INF/accesstransformer.cfg"]
    }
    parchment {
        minecraftVersion = "1.20.1"
        mappingsVersion = "2023.09.03"
    }
    runs {
        client {
            client()
        }
        data {
            data()
            programArguments.addAll("--all", "--mod", "brewinandchewin", "--existing-mod", "farmersdelight", '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath())
        }
        server {
            server()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

repositories {
    maven {
        // JEI
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // CraftTweaker
        name = "BlameJared"
        url = "https://maven.blamejared.com/"
    }
    maven { url "https://maven.ryanliptak.com/" }
    maven { // Registrate
        url "https://maven.tterrag.com/"
    }
    maven {
        name "createmod maven"
        url "https://maven.createmod.net/"
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url "https://maven.terraformersmc.com/"
        name "TerraformersMC"
    }
}

sourceSets.main.resources {
    srcDirs += 'src/generated/resources'
}

dependencies {
    implementation("org.jetbrains:annotations:24.1.0")

    modImplementation("curse.maven:farmersdelight-398521:5962797")

    modImplementation("curse.maven:farmersrespite-551453:5543547")
    modCompileOnly("com.tterrag.registrate:Registrate:MC1.20-1.3.0")
    modCompileOnly("com.simibubi.create:create-1.20.1:0.5.1.j-55:all")
    modRuntimeOnly("curse.maven:create-328085:5838779")

    // compile against the JEI API but do not include it at runtime
    modCompileOnly("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
    modCompileOnly("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
    // at runtime, use the full JEI jar for Forge
    modRuntimeOnly("mezz.jei:jei-${mc_version}-forge:${jei_version}")

    modCompileOnly("dev.emi:emi-forge:${emi_version}:api")
    // Uncomment the below to test EMI.
    modRuntimeOnly("dev.emi:emi-forge:${emi_version}")

    modImplementation("squeek.appleskin:appleskin-forge:${appleskin_version}")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixin_extras_version}"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:${mixin_extras_version}"))
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "brewinandchewin",
                "Specification-Vendor"    : "umpaz",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "umpaz",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "brewinandchewin.mixins.json"
        ])
    }
}

compileJava {
    options.compilerArgs << "-Acrafttweaker.processor.document.output_directory=${file('docsOut')}"
}

processResources {
    var replaceProperties = [
            minecraft_version: mc_version,
            minecraft_version_range: mc_version_range,
            forge_version_range: forge_version_range,

            mod_id: mod_id,
            mod_name: mod_name,
            mod_version: version,
            mod_license: license,
            mod_authors: mod_authors,
            mod_description: mod_description,
            mod_homepage: mod_homepage,
            mod_github: mod_github,

            farmers_delight_version_range: farmers_delight_version_range,
    ]
    // setting them as input
    inputs.properties replaceProperties

    filesMatching("META-INF/mods.toml") {
        expand replaceProperties + [project: project]
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId base.archivesName.get()
            from components.java
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}